--- a/public/painting-app/css/style.css
+++ b/public/painting-app/css/style.css
@@ -200,15 +200,60 @@ body {
 
 
 .btn-square.active{}
-#cloud-modal h5,#print-modal h5{margin:0;font-size:13px;}
-
-#cloud-modal .modal-header,#print-modal .modal-header {
-    padding: 10px 15px 10px 15px;
+#cloud-modal h5, #print-modal h5 {
+    margin: 0;
+    font-size: 16px;
+    font-weight: normal;
 }
-#cloud-modal .modal-content{width:350px;}
-#print-modal .modal-content{width:400px;}
-#print-modal .modal-body{padding-top:30px;padding-bottom: 30px;}
-#cloud-modal .modal-body,#print-modal .modal-body{max-height:400px;overflow-y:auto;background:#fafafa;}
+
+.modal .modal-header {
+    padding: 5px 15px 15px 15px;
+    background: #ffbe5e;
+}
+ .modal .modal-footer {
+    background: #f1e8e8;
+    padding:5px 5px 10px 5px;
+    text-align: center;
+}
+#print-modal input[type="radio"]:not(:checked),#print-modal input[type="radio"]:checked {
+     position: static;
+     left: -9999px;
+     opacity: 1;
+    background:#fff;
+}
+#print-modal [type="radio"]:not(:checked) + label, #print-modal [type="radio"]:checked + label {
+    position: relative;
+     padding-left: 0px;
+     cursor: pointer;
+    display: inline-block;
+     height: auto;
+     line-height: normal;
+     font-size: 14px;
+    transition: none;
+    -webkit-user-select: initial;
+    -moz-user-select: initial;
+    -ms-user-select: auto;
+    user-select: auto;
+}
+[type="radio"] + label:before, [type="radio"] + label:after{content:none;}
+#print-modal label{font-weight: normal;font-size:14px;}
+.modal-footer .btn-close {
+    background: #fff;
+    color: #000;
+    box-shadow: 0px 1px 1px 1px #8a8686;
+}
+
+.modal-content{width:350px;background: #ffbe5e;padding:10px;}
+#print-modal .modal-content{width:500px;}
+#print-modal .modal-body{padding-top:30px;padding-bottom: 5px;}
+.print-portions,.print-options{
+    border: 1px solid #fff;
+    padding: 10px;
+    box-shadow: 1px 0px 1px 1px #e2e2e2;
+}
+.print-options{margin-top:5px;margin-bottom:5px;}
+
+.modal-body{max-height:400px;overflow-y:auto;background:#f1e8e8;}
 .canvas-wrapper.no-scroll{overflow: hidden;}
 .navbar-nav>li>a {
     margin: 0;
@@ -231,18 +276,7 @@ body {
 }
 .canvas-list{width:95%!important;}
 .modal-header{position: relative;}
-.modal-header .btn-close {
-    padding: 2px;
-    outline: none!important;
-    background: none!important;
-    position: relative;
-    margin-top: -30px;
-    box-shadow: none!important;
-    font-size: 18px!important;
-    float: right;
-    margin-right: -10px;
-    top: 8px;
-}
+
 #symbol-modal .modal-header .btn-close{
     margin-right: 7px;
     top: -6px;
@@ -303,8 +337,16 @@ body {
     padding-top: 20%;
     z-index: 9999;
 }
-.modal-header,.modal-footer{background:#f7f0f0;}
-.modal-header .btn-close{top:-24px;}
+.modal-header .btn-close {
+    padding: 0px 11px;
+    position: absolute;
+    right: -2px;
+    top: -5px;
+    background: #dc0303!important;
+    color: #fff;
+    font-size: 22px!important;
+}
+.modal-header h3,.modal-header h4, .modal-header h5{margin:0;}
 .pad-tb-10{padding-top:10px;padding-bottom:10px;}
 .sub-dropdown-menu{top:initial!important;}
 .top-navbar>li>.dropdown-menu{margin-top:0!important;z-index: 9999;}
